# imatools

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  boxplot_variables_in_file.py  calc_hausdorff.py  calc_hausdorff_stats.py  calculate_volume.py  compare_fibrosis_per_threshold.py  environment.yaml  example.par  hausdorff_inter.py  hausdorff_inter.sh  hausdorff_intra.py  hausdorff_intra.sh  inter.txt  intra.txt  ioutils.py  load_carp_mesh.py  mkdocs.yml  plot_hausdorff_distance.py  plotutils.py  pyproject.toml  qulati_downsample_pair.py  reproducibility_calculations.py  scr_check_scar.py  setup.sh  stack_individual_dicoms.py  surface_area_inter.py  test.py  test_hausdorff_inter.py  test_qulati.py  vtk_pointscalars2dat.py  vtktools.py
.github/workflows/: docs.yml  tests.yml
apps/: compare_fibrosis_overlap.py  project_scalars_on_mesh.py  qulati_downsample_pair.py  test_qulati.py  test_submodules.py
docs/: MIGRATION_GUIDE.md  RESTRUCTURING_PLAN.md  future_work.md  index.md  tutorials
docs/api/: index.md  overview.md
helper_files/: slicer_tag.json  slicer_tag_mod.json  std_tag.json
imatools/: __init__.py  calculate_volume_seg_labels.py  compare_fibrosis_overlap.py  compare_from_mapping.py  convert_coords_to_index.py  convert_dotmesh.py  convert_points_to_image.py  create_mapping.py  create_test_data.py  dice.py  enhance_debug_scar.py  flip_xy_polydata.py  get_parfile.py  ioutils.py  itktools.py  label_connectivity.py  label_morph.py  m3d_parfile.py  mesh_report.py  mesh_tools.py  multilabel_segmt_tools.py  orientation_tools.py  patient_table_from_dicom.py  plotutils.py  pool_enhance_debug_scar.py  project_scalars_on_mesh.py  qulati_downsample_pair.py  scarq_tools.py  segmentation_tools.py  show_segmentation_sharp_regions.py  stack_individual_dicoms.py  utils.py  vtk2png.py  vtktools.py
ipynb/: 01_mesh_io.ipynb  02_scalar_fields.ipynb  03_scar_and_fibrosis.ipynb  04_segmentation_labels.ipynb  05_mapping_comparison.ipynb  calculate_fibre_agreement.ipynb  centre_of_mass_dev.ipynb  comparison_results.ipynb  convert_dotmesh_to_vtk.ipynb  df_test.ipynb  elem_permutation.ipynb  get_closest_point_mapping.ipynb  get_mapping.ipynb  itk_explore.ipynb  mshz_print.ipynb  sample_sizes_explore.ipynb  sims_comparisons.ipynb  spatial_correspondence.ipynb  sweep_thresholds.ipynb  test_5_to_4.ipynb
scripts/: segmentation_process.py  vscar_projection.py
tests/: _capture_golden.py  _fixtures.py  conftest.py  test_cli.py  test_cli_comparisons.py  test_cli_report.py  test_cli_scar_score.py  test_config.py  test_core_geometry.py  test_core_image.py  test_core_label.py  test_core_mesh.py  test_core_metrics.py  test_core_scar.py  test_core_segmentation.py  test_core_spatial.py  test_foundation.py  test_io_carp.py  test_io_image.py  test_io_mesh.py  test_io_parfile.py  test_io_paths.py  test_io_scar.py  test_parsers_dotmesh.py  test_scar_runner.py
(+234 files in other folders)
