[tool.poetry]
name = "imatools"
version = "0.1.0"
license = "BSD-3"
description = "Various image analysis and mesh handling tools"
authors = ["Jose Alonso Solis-Lemus <j.solis-lemus@imperial.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
vtk = "^9.2.6"
SimpleITK = "^2.2.1"
numpy = "^1.25.0"
pandas = "^2.0.3"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
networkx = "^3.1"
scikit-image = "^0.21.0"
nibabel = "^5.1.0"
pydicom = "^2.4.1"
scipy = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
